# voxtype-systray

./: .gitignore  Cargo.toml  README.md
assets/: voxtype-systray.desktop  voxtype-systray.service
packaging/: .SRCINFO  LICENSE  PKGBUILD
src/: main.rs  settings.rs
