[package]
name = "voxtype-systray"
version = "0.1.0"
edition = "2024"
description = "Systray StatusNotifierItem pour Voxtype — affiche l'état du daemon dans KDE Plasma"
license = "MIT"

[dependencies]
ksni = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# US-02 : fenêtre de réglages
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
toml_edit = "0.22"
# US-03 : horodatage du titre de réunion (Local::now() + format)
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Portail XDG natif (KDE/GNOME) pour la sélection de dossier.
# La feature xdg-portal est activée par défaut ; pollster est utilisé en interne
# pour bloquer sur les appels D-Bus → aucun runtime Tokio requis sur le thread.
rfd = "0.17"

[profile.release]
strip = true
opt-level = "z"
lto = true
